2013-08-26  Santosh Mahto  <santosh.ma@samsung.com>

        Fixing compilation warning "unused parameter" in WebPageProxy.cpp
        https://bugs.webkit.org/show_bug.cgi?id=120205

        Reviewed by Anders Carlsson.

        * UIProcess/WebPageProxy.cpp:
        (WebKit::WebPageProxy::findPlugin):
        (WebKit::WebPageProxy::didBlockInsecurePluginVersion):
        Added UNUSED_PARAM to avoid warning.

2013-08-23  Andy Estes  <aestes@apple.com>

        Fix issues found by the Clang Static Analyzer
        https://bugs.webkit.org/show_bug.cgi?id=120230

        Reviewed by Darin Adler.

        * UIProcess/API/mac/WKBrowsingContextController.mm:
        (autoreleased): Don't leak CFURLs when in Objective-C GC.
        * WebProcess/WebPage/mac/WKAccessibilityWebPageObject.mm:
        (-[WKAccessibilityWebPageObject accessibilityAttributeValue:forParameter:]):
        Don't leak CFStrings when in Objective-C GC.

2013-08-26  Csaba Osztrogonác  <ossy@webkit.org>

        [WK2] Buildfix for non Mac platforms
        https://bugs.webkit.org/show_bug.cgi?id=120294

        Reviewed by Darin Adler.

        * NetworkProcess/AsynchronousNetworkLoaderClient.cpp:
        (WebKit::AsynchronousNetworkLoaderClient::didReceiveBuffer):
        * NetworkProcess/NetworkResourceLoader.h:

2013-08-26  Alexey Proskuryakov  <ap@apple.com>

        [Mac] can-read-in-dragstart-event.html and can-read-in-copy-and-cut-events.html fail
        https://bugs.webkit.org/show_bug.cgi?id=113094

        Reviewed by Darin Adler.

        Return new pasteboard change count from all functions that change it.

        * UIProcess/WebContext.h:
        * UIProcess/WebContext.messages.in:
        * UIProcess/mac/WebContextMac.mm:
        (WebKit::WebContext::pasteboardCopy):
        (WebKit::WebContext::addPasteboardTypes):
        (WebKit::WebContext::setPasteboardTypes):
        (WebKit::WebContext::setPasteboardPathnamesForType):
        (WebKit::WebContext::setPasteboardStringForType):