@@ -1,3 +1,15 @@
+2013-08-27  Csaba Osztrogonác  <ossy@webkit.org>
+
+        [WK2][Soup] Add WebFrameNetworkingContext::webFrameLoaderClient() after r154490
+        https://bugs.webkit.org/show_bug.cgi?id=120353
+
+        Reviewed by Alexey Proskuryakov.
+
+        * WebProcess/WebCoreSupport/WebPlatformStrategies.cpp:
+        * WebProcess/WebCoreSupport/soup/WebFrameNetworkingContext.cpp:
+        (WebKit::WebFrameNetworkingContext::webFrameLoaderClient):
+        * WebProcess/WebCoreSupport/soup/WebFrameNetworkingContext.h:
+
 2013-08-26  Santosh Mahto  <santosh.ma@samsung.com>
 
         Fixing compilation warning "unused parameter" in WebPageProxy.cpp
